// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c4 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className=""
    >
      <h1
        className="c2"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c3"
    >
      Corporis quasi qui voluptatem nihil sit nisi fugit. Et omnis ea eos voluptatem sint. Nostrum asperiores numquam fugiat a cumque repellat. Unde eaque placeat quasi id voluptatum ullam ut vero itaque. Corrupti autem ut voluptatum saepe. Ducimus explicabo debitis odit aliquam.
 
Qui voluptas quod unde voluptatem. Dolores tempore vero qui. Explicabo quae accusamus aspernatur ut tempora iure ea sunt qui. Repellendus architecto quis officiis veritatis hic est.
 
Veniam corrupti non impedit laboriosam. Iste magnam aut facere enim molestiae libero. Voluptas delectus est aperiam voluptas deleniti necessitatibus vitae facere nihil. Voluptatem totam iste non nam ipsa hic quia suscipit. Molestias eligendi officiis. Magnam et est assumenda dolorem sed aliquid eaque.
 
Ipsa adipisci harum suscipit. Illo illum id qui excepturi quo et neque et. Pariatur accusamus blanditiis aut perferendis molestiae officiis. Expedita pariatur qui magnam hic. Ab dignissimos ut. Veritatis et quam blanditiis et nostrum vitae.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget editable header 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c5:first-child {
  margin-top: 0;
}

.c5:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: transparent;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
  position: absolute;
  right: 2.5em;
  top: 1.25em;
}

.c4:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c4:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:active,
.c4.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c4[disabled] {
  pointer-events: none;
}

.c4[disabled]:after {
  display: block;
}

.c4:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c4:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c4 .c7 {
  font-size: 1.5em;
}

.c6 .c3 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className=""
    >
      <h1
        className="c2"
        type="header"
      >
        Edit Me
        <button
          className="c3 c4"
        >
          <svg
            fill="currentColor"
            height="1em"
            onClick={[Function]}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </button>
      </h1>
    </div>
    <p
      className="c5"
    >
      Et quia dicta quisquam illo. Cupiditate consequuntur itaque officia ut aperiam. Velit pariatur temporibus expedita. Facilis corporis at.
 
Repellat odio culpa illo exercitationem unde non sed molestias at. Quisquam officia non voluptatem atque nemo. Quis necessitatibus et sunt qui delectus optio dolores quasi molestiae.
 
Facere blanditiis aut magni facere nemo beatae rem deleniti. Dignissimos rerum tempore exercitationem ducimus ut nihil magni. Sint optio est dolorum quia voluptatem asperiores omnis. Dolor porro et est. Quibusdam quia laborum reprehenderit. Voluptatem sed illum est laborum quia omnis voluptatum.
 
Aspernatur nihil fugit. Quis voluptas adipisci recusandae qui nemo animi cum est est. Sed dicta dolorem ut ullam praesentium. Velit laboriosam accusantium atque qui accusamus est.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.25em 0 0 1.25em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Voluptate consequuntur delectus est non voluptas. Ipsa consequatur corrupti ex. Ea tenetur a rerum. Laborum earum aut nihil nisi doloremque eveniet voluptate iusto non. Dolorem earum distinctio nobis.
 
Quas accusamus cum. Est id dolores minus perferendis aliquam rem animi. Vel eligendi illo perspiciatis magni. Voluptas in et cumque provident quo dolore non exercitationem.
 
Enim quam placeat et occaecati eveniet beatae sed ullam. Fuga aut est corrupti quasi animi qui non inventore. Excepturi at sit veniam maxime rerum esse. Ipsam fugit facilis tempora est mollitia est. Saepe magni vel neque. Nulla nulla animi et sapiente eius.
 
Mollitia velit animi deserunt et unde inventore ullam. Autem hic sint sed voluptatem consectetur facilis facere distinctio. Iusto voluptas iusto. Dolor officia est at repudiandae id ab qui minus debitis.
    </p>
  </div>
</div>
`;
